docs: :memo: add documentation for update opening
